--- a/frontend/src/pages/EmployeeDashboard/components/attendanceCard/AttendanceCard.module.css
+++ b/frontend/src/pages/EmployeeDashboard/components/attendanceCard/AttendanceCard.module.css
@@ -7,9 +7,9 @@ background-color: white;
 color: #005151;
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
 border-radius: 16px;
-width: 50%;
 max-width: 100%;
 justify-content: center;
+min-width: 100%;
 
 }
 
