--- a/frontend/src/pages/EmployeeDashboard/components/customDate/CustomDate.module.css
+++ b/frontend/src/pages/EmployeeDashboard/components/customDate/CustomDate.module.css
@@ -3,4 +3,6 @@ font-family: 'Volte Rounded';
 font-weight: 500;
 font-size: 2em;
 color: #005151;
+text-align: center;
 }
+
